# raft

./: CMakeLists.txt  Readme.md
src/protocol/: append_entry_arguments.cc  append_entry_arguments.h  local_node.h  remote_node.h  remote_node_proxy.cc  remote_node_proxy.h  state.cc  state.h  state_candidate.cc  state_candidate.h  state_follower.cc  state_follower.h  state_init.h  state_leader.cc  state_leader.h  timeout.h  types.h  vote_request_arguments.cc  vote_request_arguments.h
tests/: candidate.h  follower.h  leader.h  main.cc
